# QRLabel_Generator

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  QR_DENSITY_GUIDE.md  QR_OPTIMIZATIONS_SUMMARY.md  QUICKSTART_OPTIMIZED_QRCODES.md  README.md  WAREHOUSE_PDF_GUIDE.md
examples/: generic_csv.rs  qr_density_demo.rs  qr_layout.csv  sample_data.json  simple.rs  warehouse.rs  warehouse_batch.rs  warehouse_csv.rs  warehouse_items.csv  warehouse_items.json  warehouse_pdf.rs
src/: config.rs  lib.rs  pdf.rs  qr.rs  warehouse.rs
