[package]
name = "qr-label-generator"
version = "0.1.0"
edition = "2021"
authors = ["Cristiano Cuttica cristiano.cuttica@yahoo.it"]
description = "Libreria per generare immagini QR code, con supporto batch"
license = "MIT OR Apache-2.0"
# TODO: Aggiorna con il tuo username GitHub dopo aver creato il repository
# repository = "https://github.com/tuo-username/qr-label-generator"
# homepage = "https://github.com/tuo-username/qr-label-generator"
# documentation = "https://docs.rs/qr-label-generator"
readme = "README.md"
keywords = ["qr", "qrcode", "image", "generator", "label", "warehouse"]
categories = ["encoding", "graphics", "command-line-utilities"]

[lib]
name = "qr_label_generator"
crate-type = ["rlib"]

[dependencies]
qrcode = "0.13"
image = "0.23"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
printpdf = "0.7"


