[package]
name = "qr-label-generator"
version = "0.1.0"
edition = "2021"
authors = ["Cristiano Cuttica <cristiano.cuttica@yahoo.it>"]
description = "Rust library to generate QR code images, with batch generation support from JSON and CSV files. Includes warehouse label generation with PDF output."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mioCry/QRLabel_Generator"
homepage = "https://github.com/mioCry/QRLabel_Generator"
documentation = "https://docs.rs/qr-label-generator"
readme = "README.md"
keywords = ["qr", "qrcode", "image", "generator", "label", "warehouse"]
categories = ["encoding", "graphics", "command-line-utilities"]
exclude = [
    "target/",
    "output_test/",
    "temp_qr_images/",
    "*.png",
    "*.pdf",
    "*.jpg",
    "*.jpeg",
    ".DS_Store",
    ".git/",
    ".gitignore",
    "test.png",
]

[lib]
name = "qr_label_generator"
crate-type = ["rlib"]

[dependencies]
qrcode = "0.13"
image = "0.23"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
printpdf = "0.7"


